Removing a lot of Redoot stuff

--- a/frontend/styles/root.scss
+++ b/frontend/styles/root.scss
@@ -1,9 +1,4 @@
 @import "./bootstrap/bootstrap.scss";
 
 @import "./partials/body.scss";
-@import "./partials/componentExample.scss";
-@import "./partials/counterExample.scss";
-@import "./partials/modalExample.scss";
-@import "./partials/textBindingExample.scss";
-@import "./partials/sliderExample.scss";
-@import "./partials/footer.scss";
+@import "./partials/stickyFooter.scss";
