--- a/frontend/styles/root.scss
+++ b/frontend/styles/root.scss
@@ -1,4 +1,5 @@
 @import "./bootstrap/bootstrap.scss";
 
 @import "./partials/body.scss";
+@import "./partials/introBanner.scss";
 @import "./partials/stickyFooter.scss";
