New flexbox banners with 100vh minheight containers are very nice

--- a/frontend/styles/partials/introBanner.scss
+++ b/frontend/styles/partials/introBanner.scss
@@ -5,3 +5,11 @@
 i{
     vertical-align: bottom;
 }
+
+#introBanner{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
