--- a/frontend/styles/root.scss
+++ b/frontend/styles/root.scss
@@ -1,5 +1,6 @@
 @import "./bootstrap/bootstrap.scss";
 
 @import "./partials/body.scss";
+@import "./partials/topNav.scss";
 @import "./partials/introBanner.scss";
 @import "./partials/stickyFooter.scss";
