--- a/frontend/styles/partials/introBanner.scss
+++ b/frontend/styles/partials/introBanner.scss
@@ -4,6 +4,15 @@
     max-width: 500px;
 }
 
+#bigHead{
+    transition: transform 1s;
+    transform-origin: 125px 125px;
+    &:hover{
+        transform: rotate(360deg);
+        background:white;
+    }
+}
+
 .material-icons{
     display: inline-flex;
     vertical-align: middle;
@@ -43,7 +52,7 @@
 	linear-gradient(60deg, #000 25%, transparent 25.5%, transparent 75%, #000 75%, #000), 
 	linear-gradient(60deg, #000 25%, transparent 25.5%, transparent 75%, #000 75%, #000);
 	background-size:80px 140px;
-	background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
+    background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
 }
 
 button{
