--- a/frontend/styles/partials/introBanner.scss
+++ b/frontend/styles/partials/introBanner.scss
@@ -26,7 +26,7 @@
     padding: 10px 5px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 
@@ -37,7 +37,12 @@
     display: inline-block;
     background:rgba(#fff,.85);
     border-radius: 100%;
-    border: 5px solid black
+    border: 5px solid black;
+}
+
+#introInfo{
+    padding-top:10px;
+    top:50%;
 }
 
 #introPatternBG{
@@ -55,19 +60,22 @@
     background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
 }
 
-button{
+#resumeButton{
     margin-top: 10px;
-    background: rgba($color: #fff, $alpha: .85) !important;
+    border: 2px solid black;
+    background: rgba(#fff, .85) !important;
     h4{
         margin-bottom: 0;
     }
     transition: 1s all;
 
     &:hover{
-        background: rgba($color: #fff, $alpha: 1) !important;
+        background: rgba(#fff, 1) !important;
+        border-color: white;
     }
 
     &:active{
-        background: rgba($color: #fff, $alpha: 1) !important;
+        background: rgba(#fff, 1) !important;
+        border-color: white;
     }
 }
