added projects section

--- a/frontend/styles/root.scss
+++ b/frontend/styles/root.scss
@@ -3,4 +3,5 @@
 @import "./partials/body.scss";
 @import "./partials/topNav.scss";
 @import "./partials/introBanner.scss";
+@import "./partials/projectBanner.scss";
 @import "./partials/stickyFooter.scss";
