--- a/frontend/styles/root.scss
+++ b/frontend/styles/root.scss
@@ -3,5 +3,6 @@
 @import "./partials/body.scss";
 @import "./partials/topNav.scss";
 @import "./partials/introBanner.scss";
+@import "./partials/introSVG.scss";
 @import "./partials/projectBanner.scss";
 @import "./partials/stickyFooter.scss";
