--- a/frontend/styles/partials/projectBanner.scss
+++ b/frontend/styles/partials/projectBanner.scss
@@ -1,4 +1,11 @@
 #projectBanner{
     background: rgba(#000, .3);
     padding-bottom: 10px;
+
+    .projectCard{
+        margin:5px 0;
+        min-height:300px;
+        border-radius: 2px;
+        background:rgba(white, 0.5)
+    }
 }
