--- a/frontend/styles/partials/projectBanner.scss
+++ b/frontend/styles/partials/projectBanner.scss
@@ -1,11 +1,32 @@
 #projectBanner{
-    background: rgba(#000, .3);
+    background: rgba(white, .1);
     padding-bottom: 10px;
 
+    h1{
+        margin-bottom: 20px;
+    }
+
     .projectCard{
+        display:flex;
+        align-items: center;
+        justify-content: center;
         margin:5px 0;
-        min-height:300px;
+        min-height: 300px;
+        max-height:300px;
         border-radius: 2px;
-        background:rgba(white, 0.5)
+        background:rgba(white, 0.5);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+        &:hover .projectCardContent{
+            opacity: 1;
+        }
+    }
+    .projectCardContent{
+        width: 100%;
+        background: rgba(black, .75);
+        opacity: 0;
+        transition: opacity 1s;
     }
 }
